<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">
            <Button
                android:id="@+id/query_borrow_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/right_arrow_blue"
                android:drawableEnd="@drawable/right_arrow_blue"
                android:text="@string/borrow_msg_btn"/>
            <Button
                android:id="@+id/query_borrow_history_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/right_arrow_blue"
                android:drawableEnd="@drawable/right_arrow_blue"
                android:text="@string/borrow_history_msg_btn"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/collect_btn"
                android:visibility="gone"/>
            <Button
                android:id="@+id/query_comment_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/right_arrow_blue"
                android:drawableEnd="@drawable/right_arrow_blue"
                android:text="@string/comment_btn"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_btn"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>